--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">VR Kubus</string>
+    <string name="app_name">CubeTalk VR</string>
     <string name="run">Start</string>
     <string name="mode">Modus:</string>
     <string name="delay">Vertraging in seconden:</string>
